final push all modified files are push

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines":{
+    "node":"22.13.0"
+  },
   "name": "wanderlust",
   "version": "1.0.0",
   "description": "WanderLust",
@@ -19,7 +22,10 @@
   },
   "homepage": "https://github.com/Jayesh-borase/wanderlust#readme",
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
@@ -27,6 +33,8 @@
     "joi": "^18.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
